src/libs/bsd/wait.c
@@ -12,6 +12,10 @@
 #include <sys/wait.h>
 
 
+extern pid_t _waitpid(pid_t pid, int* _status, int options,
+		team_usage_info *usage_info);
+
+
 pid_t
 wait3(int *status, int options, struct rusage *rusage)
 {
@@ -22,14 +26,10 @@ wait3(int *status, int options, struct rusage *rusage)
 pid_t
 wait4(pid_t pid, int *status, int options, struct rusage *rusage)
 {
-	pid_t waitPid = waitpid(pid, status, options);
-	if (waitPid != -1) {
-		team_usage_info info;
-		
-		// Obtain info for the process that changed state.
-		if (get_team_usage_info(waitPid, RUSAGE_SELF, &info) != B_OK)
-			return -1;
-		
+	team_usage_info info;
+	pid_t waitPid = _waitpid(pid, status, options,
+		rusage != NULL ? &info : NULL);
+	if (waitPid != -1 && rusage != NULL) {
 		rusage->ru_utime.tv_sec = info.user_time / 1000000;
 		rusage->ru_utime.tv_usec = info.user_time % 1000000;
 
